Add admin mode, allows editing of cat data

--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
       <img class="catPic"></img>
     </div>
     
-    <div id="counter">
+    <div id="adminMode">
+        <button id="admin">Admin</button>
+        <form id="catChangeForm">
+            <label>Cat Name:</label>
+            <input class="catValues" type="text" id="catName" name="catName" value=""> <br>
+
+            <label>Photo URL:</label>
+            <input class="catValues" type="text" id="catURL" name="catURL" value=""> <br>
+
+            <label>Clicks:</label>
+            <input class="catValues" type="text" id="catClicks" name="catClicks" value=""> <br>
+
+            <button id="cancel" value="Cancel">Cancel</button>
+            <input type="submit" id="submit" value="Submit">
+
+        </form>
     </div>
 
 
